--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
           </div>      
       </div>
       <br>
+      <iframe scrolling="no"  id="music-player-clear" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795790564&app_id=378984" width="500" height="500"></iframe>
+      <iframe scrolling="no"  id="music-player-storm" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795842484&app_id=378984" width="500" height="500"></iframe>
+      <iframe scrolling="no"  id="music-player-snow"  frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795832064&app_id=378984" width="500" height="500"></iframe>
+      <iframe scrolling="no"  id="music-player-rain" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795817704&app_id=378984" width="500" height="500"></iframe>
+      <iframe scrolling="no"  id="music-player-inclement" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6812216084" width="500" height="500"></iframe>
+
+      <br>
+      <div class="output"></div>
+
+
     
-      <iframe scrolling="no" allow="autoplay" id="music-player-clear" frameborder="0" allowTransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=true&playlist=false&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795790564&app_id=378984" width="500" height="500"></iframe>
-   
 
 <script src="script.js"></script>
 </body>
