--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <title>WeatherMoodScene</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/1de8a77d2a.js" crossorigin="anonymous"></script>
 </head>
+<header>
+    <h1>WeatherMood <i class="fas fa-sun"></i></h1>
+</header>
 <body>
     <div id="search-container">
       <input class="search-city" type="text" placeholder="City Name or Zipcode" id="searchInput">
-      <button class="search-city" id="searchBtn">Search</button>
+      <button type="submit" class="search-city" id="searchBtn">Search</button>
     </div>
+    <div class="weathermood" id="weathermood">
       <div id="weather-container">
           <h1 id="cityName"></h1>
           <div id="weatherMain">
@@ -19,21 +24,18 @@
           </div>      
       </div>
       <br>
-      <iframe scrolling="no"  id="music-player-clear" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795790564&app_id=378984" width="500" height="500"></iframe>
-      <iframe scrolling="no"  id="music-player-storm" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795842484&app_id=378984" width="500" height="500"></iframe>
-      <iframe scrolling="no"  id="music-player-snow"  frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795832064&app_id=378984" width="500" height="500"></iframe>
-      <iframe scrolling="no"  id="music-player-rain" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6795817704&app_id=378984" width="500" height="500"></iframe>
-      <iframe scrolling="no"  id="music-player-inclement" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=500&height=500&color=ff0000&layout=dark&size=big&type=playlist&id=6812216084" width="500" height="500"></iframe>
-
+      <div id="musicplayer">
+      <iframe scrolling="no"  id="music-player-clear" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=75&height=75&color=ff0000&layout=dark&size=big&type=playlist&id=6795790564&app_id=378984" width="75" height="75"></iframe>
+     <iframe scrolling="no"  id="music-player-storm" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=75&height=75&color=ff0000&layout=dark&size=big&type=playlist&id=6795842484&app_id=378984" width="75" height="75"></iframe>
+     <iframe scrolling="no"  id="music-player-snow"  frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=75&height=75&color=ff0000&layout=dark&size=big&type=playlist&id=6795832064&app_id=378984" width="75" height="75"></iframe>
+     <iframe scrolling="no"  id="music-player-rain" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=75&height=75&color=ff0000&layout=dark&size=big&type=playlist&id=6795817704&app_id=378984" width="75" height="75"></iframe>
+     <iframe scrolling="no"  id="music-player-inclement" frameborder="0" allowtransparency="true" src="https://www.deezer.com/plugins/player?format=square&autoplay=false&playlist=true&width=75&height=75&color=ff0000&layout=dark&size=big&type=playlist&id=6812216084" width="75" height="75"></iframe>
+      </div>
       <br>
       <div class="output"></div>
-
-
-    
-
+    </div>
 <script src="script.js"></script>
 </body>
-
 </html>
 
 
